[package]
name = "ds_proxy"
version = "0.1.0"
authors = ["simon lehericey <mail@simon.lehericey.net>"]
edition = "2018"
build = "build.rs" # Cargo only supports one build script per project at the moment
rust-version = "1.93.1"
license = "AGPL-3.0-only"
description = "DS Proxy is an S3 and Swift compatible streaming encryption HTTP proxy"

[dependencies]
libsodium-rs = "*"
futures = "*"
futures-core = "*"
actix-web = { version="*", features = ["openssl"] }
awc = { version = "*", features = ["openssl"] }
actix-http = "*"
actix-files = "*"
bytes = "*"
docopt = "*"
serde = { version = "*", features = ["derive"] }
serde_with = { version = "*", features = ["base64"] }
toml = "*"
log = "*"
env_logger = "*"
sentry = "*"
sentry-actix = "*"
url = "*"
base64 = "*"
serde_json = "*"
tokio = { version = "*", features = ["full"] }
tokio-util = { version = "*", features = ["full"] }
chrono = "*"
hex = "*"
deadpool-redis = { version = "*", features = ["tokio-native-tls-comp"] }
ring = "*"
http = "*"
sha256 = "*"
data-encoding = "*"
openssl = "*"
md-5 = "*"
sha2 = "*"
aws-config = { version = "*", features = ["behavior-version-latest"] }
aws-sdk-s3 = "*"
aws-sigv4 = "*"

[dev-dependencies]
assert_cmd = "*"
assert_fs = "*"
actix-rt = "*"
proptest = "*"
rand = "*"
serial_test = "*"
serde_json = "*"
uuid = { version = "*", features = ["v4"] }
tempfile = "3.26.0"
